初步完成数据读写

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,15 +6,16 @@ link_directories(lib)
 include_directories(include)
 aux_source_directory(src SOURCES)
 add_compile_options(-mavx2)
+file(GLOB INCLUDE "include/*")
 
-add_executable(newDB  ${SOURCES} main.cpp
-        include/journal.h
-        include/file.h
+add_executable(newDB  ${SOURCES} ${INCLUDE} main.cpp
         #roaring_bitmap
         third-part/roaring_bitmap/roaring.hh
         third-part/roaring_bitmap/roaring.h
         third-part/roaring_bitmap/roaring.c
+        #sqlite
+        third-part/sqlite/sqlite3.c
+        third-part/sqlite/sqlite3.h
 )
-# 添加头文件目录
-target_include_directories(newDB PRIVATE include)
 
+target_link_libraries(newDB PRIVATE ${CMAKE_SOURCE_DIR}/lib/libbase64.o)
