初步完成表达式到指令的转换

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,5 +18,6 @@ add_executable(newDB  ${SOURCES} ${INCLUDE} main.cpp
         third-part/sqlite/sqlite3.h
         include/db.h
         src/db.cpp
+        test/test.h
 )
 
