尝试优化查询指令生成

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(newDB  ${SOURCES} ${INCLUDE} main.cpp
         #sqlite
         third-part/sqlite/sqlite3.c
         third-part/sqlite/sqlite3.h
+        src/table.cpp
         test/timer.h
         src/db_reader.cpp
 )
