完成btree_page部分的编写和测试

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.22)
 project(newDB)
-
 set(CMAKE_CXX_STANDARD 17)
+
+# Google Test 设置
+find_package(GTest REQUIRED)
+include_directories(${GTEST_INCLUDE_DIRS})
+
 link_directories(lib)
 include_directories(include)
 aux_source_directory(src SOURCES)
@@ -20,5 +24,12 @@ add_executable(newDB  ${SOURCES} ${INCLUDE} main.cpp
         third-part/cjson/cJSON.c
         third-part/cjson/cJSON.h
 
+        #test
+        test/test.h
+        test/function.cpp
+#        test/test_pager.cpp
+        test/test_btree_page.cpp
+        src/btree.cpp
 )
 
+target_link_libraries(newDB ${GTEST_LIBRARIES} pthread)
