修复了btree_page中的大量bug并优化了测试代码

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ add_executable(newDB  ${SOURCES} ${INCLUDE} main.cpp
 #        test/test_pager.cpp
         test/test_btree_page.cpp
         src/btree-cursor.cpp
+        test/test_btree.cpp
 )
 
 target_link_libraries(newDB ${GTEST_LIBRARIES} pthread)
