--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,9 @@ add_executable(newDB  ${SOURCES} ${INCLUDE} main.cpp
 #        test/test_pager.cpp
         test/test_btree_page.cpp
         test/test_btree.cpp
+        include/btree_internal_page.h
+        src/btree_internal_page.cpp
+        test/test_btree_internal_page.cpp
 )
 
 target_link_libraries(newDB ${GTEST_LIBRARIES} pthread)
