修改写入逻辑以大幅提升性能

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ add_executable(newDB  ${SOURCES} ${INCLUDE} main.cpp
         #test
         test/test.h
         test/function.cpp
+        tools/tool.h
+        tools/tools.cpp
         #        test/test_pager.cpp
 #        test/test_btree_page.cpp
 #        test/test_btree.cpp
